--- a/pm-architect/package.json
+++ b/pm-architect/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@prisma/client": "^6.12.0",
     "@prisma/extension-accelerate": "^2.0.2",
+    "date-fns": "^4.1.0",
     "framer-motion": "^12.23.0",
+    "lucide-react": "^0.536.0",
     "next": "15.3.4",
     "next-auth": "^4.24.11",
     "prisma": "^6.12.0",
