--- a/pm-architect/package.json
+++ b/pm-architect/package.json
@@ -4,16 +4,17 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "prisma generate && next build",
     "start": "next start",
     "lint": "next lint",
     "studio": "prisma studio",
     "postinstall": "prisma generate",
+    "vercel-build": "prisma generate && next build",
     "db:push": "prisma db push",
     "db:migrate": "prisma migrate deploy",
     "db:seed": "tsx prisma/seed.ts",
     "type-check": "tsc --noEmit",
-    "build:prod": "npm run type-check && npm run build",
+    "build:prod": "npm run type-check && prisma generate && npm run build",
     "start:prod": "NODE_ENV=production next start -p $PORT"
   },
   "dependencies": {
