--- a/pm-architect/backend/requirements.txt
+++ b/pm-architect/backend/requirements.txt
@@ -3,5 +3,9 @@ uvicorn[standard]==0.30.6
 httpx==0.27.2
 pydantic==2.9.2
 pydantic-settings==2.6.1
-
-
+redis==5.0.1
+rq==1.15.1
+sqlalchemy==2.0.25
+asyncpg==0.29.0
+psycopg2-binary==2.9.9
+google-generativeai==0.3.2
