--- a/render.yaml
+++ b/render.yaml
@@ -1,12 +1,3 @@
-services:
-  - type: web
-    name: pmarchitect-backend
-    env: python
-    rootDir: backend
-    buildCommand: pip install -r requirements.txt
-    startCommand: uvicorn app.main:app --host 0.0.0.0 --port $PORT
-    envVars:
-      - key: PYTHON_VERSION
-        value: 3.12.6
-      - key: RENDER_PYTHON_VERSION
-        value: 3.12.6
+buildCommand: pip install -r backend/requirements.txt
+startCommand: uvicorn app.main:app --host 0.0.0.0 --port $PORT
+runtime: python
