--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,8 +6,7 @@ pydantic-settings==2.6.1
 redis==5.0.1
 rq==1.15.1
 sqlalchemy==2.0.34
-#asyncpg==0.29.0
 psycopg2-binary==2.9.9
 google-generativeai==0.3.2
-python-multipart
-dotenv
+python-multipart==0.0.20
+python-dotenv==1.0.1
