--- a/render.yaml
+++ b/render.yaml
@@ -1,3 +1,12 @@
-buildCommand: pip install -r backend/requirements.txt
-startCommand: uvicorn app.main:app --host 0.0.0.0 --port $PORT
-runtime: python
+services:
+  - type: web
+    name: pm-architect-backend
+    env: python
+    rootDir: backend
+    buildCommand: pip install -r requirements.txt
+    startCommand: uvicorn app.main:app --host 0.0.0.0 --port $PORT
+    envVars:
+      - key: DATABASE_URL
+        sync: false
+      - key: REDIS_URL
+        sync: false
