--- a/package.json
+++ b/package.json
@@ -1,31 +1,19 @@
 {
   "name": "pm-architect",
-  "version": "0.1.0",
+  "version": "1.0.0-lite",
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "prisma generate && next build",
+    "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "studio": "prisma studio",
-    "postinstall": "prisma generate",
-    "vercel-build": "prisma generate && next build",
-    "db:push": "prisma db push",
-    "db:migrate": "prisma migrate deploy",
-    "db:seed": "tsx prisma/seed.ts",
-    "type-check": "tsc --noEmit",
-    "build:prod": "npm run type-check && prisma generate && npm run build",
-    "start:prod": "NODE_ENV=production next start -p $PORT"
+    "type-check": "tsc --noEmit"
   },
   "dependencies": {
-    "@prisma/client": "^6.12.0",
-    "@prisma/extension-accelerate": "^2.0.2",
     "date-fns": "^4.1.0",
     "framer-motion": "12.23.24",
     "lucide-react": "^0.536.0",
     "next": "15.3.4",
-    "next-auth": "^4.24.11",
-    "prisma": "^6.12.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "recharts": "3.2.1"
@@ -38,7 +26,6 @@
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.0.0",
-    "tsx": "^4.19.2",
     "typescript": "^5"
   },
   "engines": {
