--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -20,3 +20,9 @@ python-dotenv==1.0.1
 
 # File upload support (optional, for future features)
 python-multipart==0.0.20
+
+# Groq API client for free-tier LLM access
+groq==0.11.0
+
+# OpenAI-compatible client for DeepSeek API
+openai==1.12.0
