--- a/package.json
+++ b/package.json
@@ -11,13 +11,17 @@
     "vercel-build": "next build"
   },
   "dependencies": {
+    "@types/react-syntax-highlighter": "^15.5.13",
     "date-fns": "^4.1.0",
     "framer-motion": "12.23.24",
     "lucide-react": "^0.536.0",
     "next": "15.3.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "recharts": "3.2.1"
+    "react-markdown": "^10.1.0",
+    "react-syntax-highlighter": "^16.1.0",
+    "recharts": "3.2.1",
+    "remark-gfm": "^4.0.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
